update: add analytics

--- a/about.html
+++ b/about.html
@@ -2,25 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
     <script src="script.js"></script>
-    <link rel="icon" type="image/jpg" href="Assets/favicon.jpg">
+    <link href="Assets/favicon.jpg" rel="icon" type="image/jpg">
     <title>About Me</title>
 </head>
 <body>
 <header>
-    <a href="index.html" class="logo-holder"><img src="/Assets/Logo.png" alt="Arad Saidi"></a>
+    <a class="logo-holder" href="index.html"><img alt="Arad Saidi" src="/Assets/Logo.png"></a>
     <nav>
         <ul id="menu">
             <li>
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="about.html" class=" active">About</a>
+                <a class=" active" href="about.html">About</a>
             </li>
             <li>
                 <a href="blog.html">Blog</a>
@@ -35,12 +35,13 @@
     <section class="hero container">
         <div class="circle"></div>
         <div class="hero-yellow">
-            <img src="Assets/me.png" alt="Arad Saidi" width="100%">
+            <img alt="Arad Saidi" src="Assets/me.png" width="100%">
         </div>
         <div class="hero-blue"><h1>About Me</h1>
-            <p class="p-about">I am a beginner UI/UX designer who loves learning new things and
-                working in a team. I
-                have been on this path since 2021 and taught myself through the internet. I have created many layouts
+            <p class="p-about">I am a junior UI/UX designer who loves learning new things and
+                working in a team.
+                I have been on this path since 2021 and taught myself through the internet. I have
+                created many layouts
                 which
                 you can see on my dribbble page. Right now I'm learning HTML, CSS, and javascript
                 to expand my knowledge in the design world. I would be very happy if you want me to join your team and
@@ -52,10 +53,11 @@
             <p>scroll down</p>
         </div>
         <div>
-            <svg class="w-[40px] h-[40px] text-gray-800 dark:text-white" aria-hidden="true"
-                 xmlns="http://www.w3.org/2000/svg" width="90" height="24" fill="none" viewBox="0 0 24 24">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
-                      d="M52 12H0m52 0-14 7m7-7-7-0"/>
+            <svg aria-hidden="true" class="w-[40px] h-[40px] text-gray-800 dark:text-white"
+                 fill="none" height="24" viewBox="0 0 24 24" width="90" xmlns="http://www.w3.org/2000/svg">
+                <path d="M52 12H0m52 0-14 7m7-7-7-0" stroke="currentColor" stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="1"/>
             </svg>
         </div>
     </section>
@@ -66,7 +68,7 @@
                 <h2>Design Tools</h2>
                 <div class="skill1">
                     <div class="progress-title"> Experienced
-                        <div class="bar1">Adobe
+                        <div class="bar1">Adobe Creative Cloud
                             <div class="progress-container">
                                 <div class="progress-bar-50"></div>
                             </div>
@@ -75,7 +77,7 @@
                 </div>
                 <div class="skill1">
                     <div class="progress-title"> Experienced
-                        <div class="bar1">Affinity
+                        <div class="bar1">Affinity Designer/Photo
                             <div class="progress-container">
                                 <div class="progress-bar-50"></div>
                             </div>
@@ -100,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-             </div>
+            </div>
 
             <div class="left-column">
                 <h2>Programming Language</h2>
@@ -146,7 +148,7 @@
                 <h2>Programming Tools</h2>
                 <div class="skill1">
                     <div class="progress-title"> Beginner
-                        <div class="bar1">VSC
+                        <div class="bar1">Visual Studio Code
                             <div class="progress-container">
                                 <div class="progress-bar-25"></div>
                             </div>
@@ -154,6 +156,24 @@
                     </div>
                 </div>
                 <div class="skill1">
+                    <div class="progress-title"> Beginner
+                        <div class="bar1">PHPStorm
+                            <div class="progress-container">
+                                <div class="progress-bar-25"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="notactive">
+                    <div class="progress-title"> Beginner
+                        <div class="bar1">PHPStorm
+                            <div class="progress-container">
+                                <div class="progress-bar-25"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="notactive">
                     <div class="progress-title"> Beginner
                         <div class="bar1">PHPStorm
                             <div class="progress-container">
