--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         gtag('config', 'G-CPF0PDGJLM');
     </script>
+    <meta name="theme-color" content="#141414" media="(prefers-color-scheme: dark)"/>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
