--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         gtag('config', 'G-CPF0PDGJLM');
     </script>
-    <meta name="theme-color" content="#141414" media="(prefers-color-scheme: dark)"/>
+    <meta content="#141414" media="(prefers-color-scheme: dark)" name="theme-color"/>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -22,8 +22,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
     <script src="script.js"></script>
-    <link href="Assets/favicon.jpg" rel="icon" type="image/jpg">
-    <title>Arad Saidi</title>
+    <!-- ios favicon -->
+    <link href="favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <!-- chrome favicon -->
+    <link href="favicons/transparent_favicon_io/favicon.ico" rel="favicon">
+    <title>Arad</title>
 </head>
 <body>
 <header>
@@ -46,7 +49,7 @@
             <img alt="Arad Saidi" src="Assets/me.png" width="100%">
         </div>
         <div class="hero-blue"><h1>UI/UX Designer & Front-End Developer.</h1>
-            <p>Hey 👋🏻, my name is Arad. A passionate designer & developer based in Germany 🇩🇪.</p></div>
+            <p>Hiii 👋🏻, my name is Arad. A passionate designer & developer based in Germany 🇩🇪.</p></div>
     </section>
 </main>
 <div class="social-links">
