--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           rel="stylesheet">
     <script src="script.js"></script>
     <!-- ios favicon -->
-    <link href="favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="favicons/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- chrome favicon -->
     <link href="favicons/transparent_favicon_io/favicon.ico" rel="favicon">
     <title>Arad</title>
