--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         gtag('config', 'G-CPF0PDGJLM');
     </script>
+    <!-- Progressive Web Application -->
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="#141414" media="(prefers-color-scheme: dark)" name="theme-color"/>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
