--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </script>
     <!-- Progressive Web Application -->
     <meta content="yes" name="apple-mobile-web-app-capable"/>
+
+    <link href="/manifest.json" rel="manifest">
     <meta content="#141414" media="(prefers-color-scheme: dark)" name="theme-color"/>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
