--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <header>
-    <a class="logo-holder" href="index.html"><img alt="Arad Saidi" src="/Assets/Logo.png"></a>
+    <a class="logo-holder" href="index.html"><img alt="Arad Saidi" src="/Assets/Logo.svg"></a>
     <nav>
         <ul id="menu">
             <li>
